fix(movie-container): set base rate color, whitespace before original language

--- a/src/scss/components/movie-container.scss
+++ b/src/scss/components/movie-container.scss
@@ -53,6 +53,7 @@
     width: 40px;
     height: 40px;
     background: $rating-background;
+    color: #000;
     border-radius: 50%;
     display: flex;
     justify-content: center;
